--- a/examples/flask-teradata/udaexec.ini
+++ b/examples/flask-teradata/udaexec.ini
@@ -1,1 +1,17 @@
-
+# Application Configuration
+[CONFIG]
+appName=HelloTeradata
+version=1.0
+logConsole=True
+dataSourceName=TDPROD
+ 
+# Default Data Source Configuration
+[DEFAULT]
+method=odbc
+charset=UTF8
+ 
+# Data Source Definition
+[TDPROD]
+system=tdprodla.nbcuni.ge.com
+username=206438423
+password=NBCu2015bscs
